Added a summary in the last cell.

--- a/mystery_data_RAL_ML.ipynb
+++ b/mystery_data_RAL_ML.ipynb
@@ -469,6 +469,15 @@
    "source": [
     "results_dict"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# The best result, lower MSE is observed for the Random Forest model with a max depth of 5; MSE = 132.96"
+   ]
   }
  ],
  "metadata": {
